# netgen

./: .gitlab-ci.yml
libsrc/: CMakeLists.txt
libsrc/include/: CMakeLists.txt  mymesh.hpp  mymeshinterface.hpp  nginterface_v2.hpp  nginterface_v2_impl.hpp
libsrc/interface/: CMakeLists.txt  mymeshinterface.cpp  nginterface_v2.cpp
libsrc/mymesh/: CMakeLists.txt  mymesh_python.cpp  mymeshclass.cpp  mymeshclass.hpp  mymeshclasstest.cpp  mymeshpythontest.py  mytest.py
ng/: CMakeLists.txt  netgenpy.cpp
nglib/: CMakeLists.txt
python/: CMakeLists.txt  mymesh.py
